--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,4 @@
 {
-  "id": "/cuentasClaras",
   "name": "Cuentas Claras - División de Gastos",
   "short_name": "CuentasClaras",
   "description": "División justa de gastos para asados",
@@ -11,27 +10,17 @@
   "scope": "./",
   "icons": [
     {
-      "src": "https://via.placeholder.com/192x192/667eea/ffffff?text=CC",
+      "src": "./assets/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
-      "src": "https://via.placeholder.com/512x512/667eea/ffffff?text=CC",
+      "src": "./assets/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ],
-  "screenshots": [
-    {
-      "src": "https://zzanni.github.io/cuentasClaras/screenshot1.png",
-      "sizes": "575x1007",
       "type": "image/png"
     }
   ],
   "categories": ["finance", "utilities"],
   "lang": "es",
-  "dir": "ltr",
-  "prefer_related_applications": false
+  "dir": "ltr"
 }
