--- a/manifest.json
+++ b/manifest.json
@@ -9,15 +9,17 @@
   "orientation": "portrait",
   "scope": "./",
   "icons": [
-    {
+        {
       "src": "./assets/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "./assets/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "categories": ["finance", "utilities"],
