nuevo cambio en el manifest

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "orientation": "portrait",
   "scope": "./",
   "icons": [
-        {
+    {
       "src": "./assets/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
@@ -20,6 +20,13 @@
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
+    }
+  ],
+  "screenshots": [ 
+    {
+      "src": "./assets/screenshot1.png",
+      "sizes": "600x800", 
+      "type": "image/png"
     }
   ],
   "categories": ["finance", "utilities"],
