--- a/manifest.json
+++ b/manifest.json
@@ -1,32 +1,23 @@
 {
-  "name": "Cuentas Claras - División de Gastos",
+  "name": "Cuentas Claras - División de Gastos",  
   "short_name": "CuentasClaras",
   "description": "Te Ayuda a Dividir Los Gastos Para tu Asado o Reunión",
   "start_url": "./",
-  "display": "standalone",
+  "display": "standalone", 
   "background_color": "#667eea",
   "theme_color": "#667eea",
   "orientation": "portrait",
   "scope": "./",
   "icons": [
     {
-      "src": "./assets/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "src": "https://via.placeholder.com/192x192/8B4513/FFFFFF?text=🍖",
+      "sizes": "192x192", 
+      "type": "image/png"
     },
     {
-      "src": "./assets/icon-512x512.png",
+      "src": "https://via.placeholder.com/512x512/8B4513/FFFFFF?text=🍖",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ],
-  "screenshots": [ 
-    {
-      "src": "./assets/screenshot1.png",
-      "sizes": "600x800", 
-      "type": "image/png"
+      "type": "image/png" 
     }
   ],
   "categories": ["finance", "utilities"],
