--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,37 @@
 {
-  "name": "Cuentas Claras - División de Gastos",  
+  "id": "/cuentasClaras",
+  "name": "Cuentas Claras - División de Gastos",
   "short_name": "CuentasClaras",
   "description": "Te Ayuda a Dividir Los Gastos Para tu Asado o Reunión",
   "start_url": "./",
-  "display": "standalone", 
+  "display": "standalone",
   "background_color": "#667eea",
   "theme_color": "#667eea",
   "orientation": "portrait",
   "scope": "./",
   "icons": [
     {
-      "src": "https://via.placeholder.com/192x192/8B4513/FFFFFF?text=🍖",
-      "sizes": "192x192", 
-      "type": "image/png"
+      "src": "https://via.placeholder.com/192x192/667eea/ffffff?text=CC",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "https://via.placeholder.com/512x512/8B4513/FFFFFF?text=🍖",
+      "src": "https://via.placeholder.com/512x512/667eea/ffffff?text=CC",
       "sizes": "512x512",
-      "type": "image/png" 
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "https://zzanni.github.io/cuentasClaras/screenshot1.png",
+      "sizes": "575x1007",
+      "type": "image/png"
     }
   ],
   "categories": ["finance", "utilities"],
   "lang": "es",
-  "dir": "ltr"
+  "dir": "ltr",
+  "prefer_related_applications": false
 }
